# PersianDevBot

./: .gitignore  bot.py  config.json  main.py  pyproject.toml  requirements.txt  todo.txt
PersianDevBot/utils/: __init__.py
extensions/: auto_threading.py  error_handler.py  misc.py  report.py
persiandevbot/: __init__.py  __main__.py  bot.py  config.json  runner.py
persiandevbot/extensions/: __init__.py  auto_threading.py  error_handler.py  misc.py  report.py
persiandevbot/testing/: test.py
persiandevbot/utils/: config.py  database.py  keep_alive.py  logger.py
utils/: config.py  database.py  keep_alive.py  logger.py
